--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,13 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
-  <app-root></app-root>
+  
+  <app-root>
+
+  </app-root>
+  <span class="content"></span> 
 </body>
+
 </html>
